...
              ),
            ),
          ),
        ),
        actions: [
          PopupMenuButton<String>(
            key: Key("gifts_popup_menu"),
            onSelected: (value) {
              setState(() {
                sortCriteria = value;
                sortGifts();
              });
            },
            itemBuilder: (context) => [
              PopupMenuItem(
                  key: Key("sort_gifts_name"),
                  value: "name",
                  child: Text("Sort by Name")),
              PopupMenuItem(
                  key: Key("sort_gifts_category"),
                  value: "category",
                  child: Text("Sort by Category")),
              PopupMenuItem(
                  key: Key("sort_gifts_status"),
                  value: "status",
                  child: Text("Sort by Status")),
            ],
          ),
        ],
      ),
...
            );
          },
        ),
      ),
      floatingActionButton: isUserCreator
          ? FloatingActionButton(
              key: Key("add_gift_button"),
              onPressed: () async {
                final newGift =
                    await Navigator.of(context).push(PageRouteBuilder(
                  pageBuilder: (context, animation, secondaryAnimation) {
                    return GiftDetailsPage(eventId: widget.event.id);
                  },
...
                          : const Color.fromARGB(255, 168, 36, 139),
                    ),
                  ),
                  SizedBox(height: 16),
                  // Close button
                  TextButton(
                    key: Key("close_button"),
                    onPressed: () {
                      Navigator.of(context).pop();
                    },
                    child: Text(
                      "Close",
                      style: TextStyle(color: Colors.white),
...
      );
    }

    return Card(
      margin: EdgeInsets.symmetric(vertical: 8, horizontal: 16),
      child: ListTile(
        key: Key("gift_tile"),
        leading: giftImage,
        title: Text(giftName, style: TextStyle(fontWeight: FontWeight.bold)),
        subtitle: Text("Category: $category, Status: $status",
            style: TextStyle(color: statusColor)),
        onTap: () {
          _showGiftDetails(context, giftName, category, status, imageBase64);
        },
        trailing: Wrap(
          spacing: 12,
          children: [
            if (onEdit != null)
              IconButton(
                key: Key("edit_gift_button"),
                icon: Icon(Icons.edit, color: Theme.of(context).primaryColor),
                onPressed: onEdit,
              ),
            if (onDelete != null)
              IconButton(
                key: Key("delete_gift_button"),
                icon: Icon(Icons.delete, color: Colors.red),
                onPressed: onDelete,
              ),
            if (onPledgeChange != null)
              Switch(
                key: Key("gift_pledge_switch"),
                value: status == "Pledged",
                onChanged: (bool value) {
                  if (onPledgeChange != null) {
                    onPledgeChange!(value);
                  }
                },
...
