...
              ),
            ),
          ),
        ),
        actions: [
          PopupMenuButton<String>(
            key: const Key('popup_menu'),
            onSelected: (value) {
              setState(() {
                sortCriteria = value;
                sortEvents();
              });
            },
            itemBuilder: (context) => [
              PopupMenuItem(
                  key: const Key('sort_name'),
                  value: "name",
                  child: Text("Sort by Name")),
              PopupMenuItem(
                  key: const Key('sort_category'),
                  value: "category",
                  child: Text("Sort by Category")),
              PopupMenuItem(
                  key: const Key('sort_status'),
                  value: "status",
                  child: Text("Sort by Status")),
            ],
          ),
        ],
      ),
...
            return Center(child: Text('No events found.'));
          },
        ),
      ),
      floatingActionButton: widget.friend.name == 'My'
          ? FloatingActionButton(
              key: const Key('add_event_button'),
              onPressed: () async {
                await Navigator.push(
                  context,
                  PageRouteBuilder(
                    pageBuilder: (context, animation, secondaryAnimation) =>
                        CreateEventListPage(),
...
    // Get the current user's id
    String currentUserId = FirebaseAuth.instance.currentUser!.uid;

    return Card(
      margin: EdgeInsets.symmetric(vertical: 8, horizontal: 16),
      child: ListTile(
        key: Key("event_tile"),
        leading: CircleAvatar(
          backgroundImage:
              AssetImage('assets/default_event_image.png'), // Default image
          radius: 30,
        ),
        title: Text(eventName, style: TextStyle(fontWeight: FontWeight.bold)),
...
              IconButton(
                key: const Key("edit_event_button"),
                icon: Icon(Icons.edit, color: Theme.of(context).primaryColor),
                onPressed: onEdit,
              ),
              IconButton(
                key: const Key("delete_event_button"),
                icon: Icon(Icons.delete, color: Colors.red),
                onPressed: onDelete,
              ),
            ],
          ],
        ),
...
