...
          padding: const EdgeInsets.all(16.0),
          child: Form(
            key: _formKey,
            child: Column(
              children: [
                _buildTextField(
                  key: const Key('event_name_field'),
                  label: "Event/List Name",
                  initialValue: eventName,
                  onSaved: (value) => eventName = value,
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      return "Please enter an event name";
                    }
                    return null;
                  },
                ),
                SizedBox(height: 16),
                _buildTextField(
                  key: const Key('event_description_field'),
                  label: "Event Description",
                  initialValue: eventDescription,
                  onSaved: (value) => eventDescription = value,
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      return "Please enter an event description";
                    }
                    return null;
                  },
                ),
                SizedBox(height: 16),
                _buildTextField(
                  key: const Key('event_location_field'),
                  label: "Event Location",
                  initialValue: eventLocation,
                  onSaved: (value) => eventLocation = value,
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      return "Please enter an event location";
                    }
                    return null;
                  },
                ),
                SizedBox(height: 16),
                _buildTextField(
                  key: const Key('event_date_field'),
                  label: "Event Date (YYYY-MM-DD)",
                  readOnly: true,
                  onTap: () async {
                    FocusScope.of(context).requestFocus(FocusNode());
                    final DateTime? pickedDate = await showDatePicker(
                      context: context,
...
                SizedBox(height: 16),
                _buildCategoryDropdown(),
                SizedBox(height: 16),
                _buildStatusDropdown(),
                SizedBox(height: 16),
                ElevatedButton(
                  key: const Key('create_event_button'),
                  onPressed: _saveEvent,
                  child: Text("Save Event/List"),
                ),
              ],
            ),
          ),
...
